# SD

./: README.md  SD  requirements.txt  setup.py
.github/workflows/: check-docs.yml  format-markdown.yml  scheduled-update.yml  welcome.yml
SD/: Report.ipynb  agent.py  pyproject.toml  requirements.txt
SD/experiments/: baseline.py  hyperparameter_results.csv  hyperparameter_search.csv
SD/models/: linear.py
SD/models/models/: random.py  torchmlp.py
SD/notebooks/: Evaluation1.ipynb  Evaluation2.ipynb  Exploration.ipynb
SD/tests/: test_agent.py
SD/utils/: compress.py  data.py  load.py  loss.py  mc_prune_int8.py  model.py  monitoring.py  visulization.py  warmcosine.py
permuted_mnist/: __init__.py
permuted_mnist/agent/Torch_mlp/: agent.py
permuted_mnist/env/: __init__.py  permuted_mnist.py  renderer.py
tools/: prepare_data.py
tools/permuted_mnist/data/: mnist_labels.npy
