[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project_agent"
version = "0.1.0"
description = "My final project submission."
authors = [
    { name = "CHEN Jianing and Dong Zhiwei", email = "brisiqchen@163.com tiphdong@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "matplotlib",
    "scikit-learn",
    "numpy",
    "jupyterlab",
    "torch",
    "pustil",
    # 你的其他核心依赖...
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["experiments*", "notebooks*", "tests*"]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]